--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb://admin:adminmongo_staging%40aloapp.vn@172.16.10.90:27017/fanout_notification_beta?authSource=admin
+MONGO_URL=mongodb://localhost:27017
 FRONTEND_URL_1=http://localhost:3000/
 FRONTEND_URL_2=http://localhost:5000/
 JWT_SECRET=taiminh
