--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ MONGO_URL=mongodb://localhost:27017
 FRONTEND_URL_1=http://localhost:3000/
 FRONTEND_URL_2=http://localhost:5000/
 JWT_SECRET=taiminh
-ADMIN_KEY=hdshop
+ADMIN_KEY=
+RAZORPAY_API_KEY=HFYVFWDYZIVVGHFKTSIFOSXPLTJMVTZD
+RAZORPAY_API_SECRET=HFYVFWDYZIVVGHFKTSIFOSXPLTJMVTZD
