--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.30.1",
     "mongoose": "^6.10.4",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
-    "razorpay": "^2.8.4"
+    "razorpay": "^2.8.4",
+    "serve-favicon": "^2.5.0"
   }
 }
