--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.10",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-validator": "^6.14.2",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.30.1",
     "mongoose": "^6.10.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "razorpay": "^2.8.4",
